--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <div class="jumbotron ">
-        <h1 class="display-4">Predict the the number of Passengers with an ease!</h1>
+        <h1 class="display-4">Predict the number of Passengers with an ease!</h1>
         <p class="lead">Here you can find the predicted value of passenger based on the 
             data you provide.</p>
         <hr class="my-4">
