--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">LinkdIn</a>
-            <a class="nav-item nav-link" href="#">Github</a>
+            <a class="nav-item nav-link" href="https://www.linkedin.com/in/jasmine-parween-393282200/">LinkdIn</a>
+            <a class="nav-item nav-link" href="https://github.com/JasmineParween/AirtrafficPassengerWebsite">Github</a>
         </div>
     </div>
 </nav>
